# mlops-faststreamflow

./: .env  .gitignore  README.md  justfile  logconf.yml  pyproject.toml  requirements.txt
ml/: __init__.py  dataset.py  learner.py  models.py
server/: main.py  util.py
viewer/: main.py
viewer/pages/: dataset.py  learn.py  predict.py
